--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-4">
   <div class="col-3">
-    <shared-home-page></shared-home-page>
+    <shared-sidebar></shared-sidebar>
   </div>
 
 
