--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,12 +1,16 @@
-<h2>Por Región</h2>
+<h2 class="col text-center">Región</h2>
 
 <hr>
 
 <div class="row">
-  <div class="col">
-    <shared-search-box
-    (onValue) = "searchRegion($event)"
-     placeholder="Buscar por región"></shared-search-box>
+  <div class="col text-center">
+
+    <button *ngFor="let region of regions"
+     class="btn mx-2"
+     [ngClass]="{ 'btn-outline-primary': selectedRegion === region}"
+     (click) = "searchRegion(region)">
+     {{ region }}
+    </button>
   </div>
 </div>
 
