Finalización del proyecto con saveLocalStorage para las búsquedas y cambio del diseño sobre region

--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -2,9 +2,12 @@
 <hr>
 <div class="row">
   <div class="col">
+
     <shared-search-box
     (onDebounce) = "searchByCapital($event)"
-     placeholder="Buscar por capital"></shared-search-box>
+    [initialValue] = "initialValue"
+     placeholder="Buscar por capital">
+    </shared-search-box>
   </div>
 </div>
 
