--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -5,8 +5,10 @@
 <div class="row">
   <div class="col">
     <shared-search-box
-    (onValue) = "searchCountry($event)"
-     placeholder="Buscar por pais"></shared-search-box>
+    (onDebounce) = "searchCountry($event)"
+    [initialValue] = "initialValue"
+     placeholder="Buscar por pais">
+    </shared-search-box>
   </div>
 </div>
 
