--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -4,5 +4,6 @@
  type="text"
   [placeholder]="placeholder"
    class="form-control"
+   [value]="initialValue"
    (keyup)="onkeyPress( txtInput.value)"
     #txtInput />
